--- a/sip-servlets-application-router/pom.xml
+++ b/sip-servlets-application-router/pom.xml
@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.5-SNAPSHOT</version>
+		<version>0.5</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-application-router</artifactId>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.5</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Default Application Router</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
@@ -17,14 +16,14 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.5-SNAPSHOT</version>
+			<version>1.1.5</version>
 		</dependency>
 		
 		<!-- sip servlet impl dependency -->
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>0.5-SNAPSHOT</version>
+			<version>0.5</version>
 		</dependency>
 
 		<!-- logging dependency -->
@@ -77,9 +76,7 @@
 								<configuration>
 									<tasks>
 										<echo message="${env.CATALINA_HOME}" />
-										<copy verbose="true"
-											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${env.CATALINA_HOME}/lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -104,9 +101,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true"
-											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -135,9 +130,7 @@
 								<configuration>
 									<tasks>
 										<echo message="${CATALINA_HOME}" />
-										<copy verbose="true"
-											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${CATALINA_HOME}/lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -162,9 +155,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true"
-											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
