[maven-release-plugin] rollback the release of sip-servlets-release-0.5
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2581 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.6-SNAPSHOT</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-impl</artifactId>
@@ -15,7 +17,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.6-SNAPSHOT</version>			
+			<version>1.1.5-SNAPSHOT</version>			
 		</dependency>
 
 		<!-- logging dependency -->
@@ -200,9 +202,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}\lib" />
-										<copy verbose="true" file="docs/logging.properties" todir="${CATALINA_HOME}/conf" />
-										<copy verbose="true" file="docs/log4j.xml" todir="${CATALINA_HOME}/lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}\lib"/>
+										<copy verbose="true" file="docs/logging.properties" todir="${CATALINA_HOME}/conf"/>
+										<copy verbose="true" file="docs/log4j.xml" todir="${CATALINA_HOME}/lib"/>
                                         <copy todir="${CATALINA_HOME}">
                                             <fileset file="LICENSES/*" />
                                         </copy>
@@ -250,9 +252,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}\lib" />
-										<copy verbose="true" file="docs/logging.properties" todir="${env.CATALINA_HOME}/conf" />
-										<copy verbose="true" file="docs/log4j.xml" todir="${env.CATALINA_HOME}/lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}\lib"/>
+										<copy verbose="true" file="docs/logging.properties" todir="${env.CATALINA_HOME}/conf"/>
+										<copy verbose="true" file="docs/log4j.xml" todir="${env.CATALINA_HOME}/lib"/>
                                         <copy todir="${env.CATALINA_HOME}">
                                             <fileset file="LICENSES/*" />
                                         </copy>
@@ -297,8 +299,8 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />
-										<copy verbose="true" file="docs/jboss-log4j.xml" todir="${env.JBOSS_HOME}/server/${node}/conf" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer"/>
+										<copy verbose="true" file="docs/jboss-log4j.xml" todir="${env.JBOSS_HOME}/server/${node}/conf"/>
                                         <copy todir="${env.JBOSS_HOME}/docs/licenses">
                                             <fileset file="LICENSES/*" />
                                         </copy>
@@ -343,7 +345,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer"/>
                                         <copy todir="${JBOSS_HOME}/docs/licenses">
                                             <fileset file="LICENSES/*" />
                                         </copy>
