[maven-release-plugin] rollback the release of sip-servlets-bootstrap-0.5
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2583 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-application-router/pom.xml
+++ b/sip-servlets-application-router/pom.xml
@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.5</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-application-router</artifactId>
-	<version>0.5</version>
+	<version>0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Default Application Router</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
@@ -16,14 +17,14 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.5</version>
+			<version>1.1.5-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- sip servlet impl dependency -->
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>0.5</version>
+			<version>0.5-SNAPSHOT</version>
 		</dependency>
 
 		<!-- logging dependency -->
@@ -76,7 +77,9 @@
 								<configuration>
 									<tasks>
 										<echo message="${env.CATALINA_HOME}" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}/lib" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -101,7 +104,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -130,7 +135,9 @@
 								<configuration>
 									<tasks>
 										<echo message="${CATALINA_HOME}" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}/lib" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -155,7 +162,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
