Preparing for maven release MSS 0.5. Re-organization of POMs to avoid a maven release bug.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2584 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>sip-servlets-bootstrap</artifactId>
 	<version>0.5-SNAPSHOT</version>
 	<packaging>pom</packaging>	
-	<name>Mobicents Sip Servlets</name>
+	<name>Mobicents Sip Servlets Documentation and Release Scripts</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<ciManagement>
 		<system>Hudson</system>
@@ -79,12 +79,6 @@
 			http://code.google.com/p/mobicents/source/browse/trunk/servers/sip-servlets
 		</url>
 	</scm>
-	<modules>
-		<module>../sip-servlets-spec</module>
-		<module>../sip-servlets-impl</module>
-		<module>../sip-servlets-application-router</module>
-	</modules>
-	
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
@@ -179,13 +173,6 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		<profile>			
-			<id>release</id>
-			<modules>
-				<module>../sip-servlets-examples</module>
-				<module>../sip-servlets-test-suite</module>
-			</modules>
 		</profile>
 	</profiles>
 	<!-- repositories -->
