--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-impl</artifactId>
 	<packaging>jar</packaging>
-	<name>Sip Servlets</name>
+	<name>Sip Servlets Implementation</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- sip servlet spec dependency -->
