Two POMs didn't get new snapshot versions. Updating manually after MSS 0.5 release.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2592 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.5</version>
-		<relativePath>../sip-servlets-bootstrap/pom.xml</relativePath>
+		<version>0.6-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>sip-servlets-examples-parent</artifactId>
