Big manual update of POMs. Preparing for MMS 0.5
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2593 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-        <artifactId>mobicents</artifactId>
-        <groupId>org.mobicents</groupId>
-        <version>3</version>
+		<groupId>org.mobicents.servlet.sip</groupId>
+		<artifactId>sip-servlets-bootstrap</artifactId>
+		<version>0.6-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
-	<artifactId>sip-servlets-bootstrap</artifactId>
+	<artifactId>sip-servlets-bootstrap-release</artifactId>
 	<version>0.6-SNAPSHOT</version>
 	<packaging>pom</packaging>	
 	<name>Mobicents Sip Servlets Documentation and Release Scripts</name>
