--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.mobicents.servlet.sip</groupId>
-		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.6-SNAPSHOT</version>
+        <artifactId>mobicents</artifactId>
+        <groupId>org.mobicents</groupId>
+        <version>3</version>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
-	<artifactId>sip-servlets-bootstrap-release</artifactId>
+	<artifactId>sip-servlets-bootstrap</artifactId>
 	<version>0.6-SNAPSHOT</version>
 	<packaging>pom</packaging>	
 	<name>Mobicents Sip Servlets</name>
