Big manual update of POMs. Preparing for MMS 0.5
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2594 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -4,6 +4,7 @@
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
 		<version>0.6-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-impl</artifactId>
