--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
-	<version>0.6-SNAPSHOT</version>
+	<version>0.5</version>
 	<packaging>pom</packaging>	
 	<name>Mobicents Sip Servlets</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
@@ -67,9 +67,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:svn:http://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</connection>
-		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</developerConnection>
-		<url>http://code.google.com/p/mobicents/source/browse/trunk/servers/sip-servlets</url>
+		<connection>scm:svn:http://mobicents.googlecode.com/svn/tags/mss05</connection>
+		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/mss05</developerConnection>
+		<url>http://code.google.com/p/mobicents/source/browse/tags/mss05</url>
 	</scm>
 	<modules>
 		<module>sip-servlets-bootstrap</module>
